# openrein

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
example/: main.py  pyproject.toml
example/src/cortex_code/: __init__.py  __main__.py  agent.py  cli.py  config.py
example/src/cortex_code/models/: glm.py
example/src/cortex_code/tools/: __init__.py  ask.py  descriptions.py  plan.py
example/src/rein_code/: __init__.py  __main__.py  agent.py  cli.py  config.py  converter.py  prompts.py  session.py
example/src/rein_code/models/: glm.py
example/src/rein_code/tools/: descriptions.py  subagent.py  todo.py
python/openrein/: __init__.py  _openrein.pyi
scripts/: build.bat  build.sh
src/: bindings.cpp  compact.cpp  compact.hpp  engine.cpp  engine.hpp  exec_result.hpp  json_fwd.hpp  subagent.cpp  subagent.hpp
src/mcp/: http_transport.cpp  http_transport.hpp  mcp_client.cpp  mcp_client.hpp  stdio_transport.cpp  stdio_transport.hpp
src/tools/: bash.cpp  bash.hpp  edit.cpp  edit.hpp  glob.cpp  glob.hpp  grep.cpp  grep.hpp  read.cpp  read.hpp  tool_base.hpp  web_fetch.cpp  web_fetch.hpp  web_search.cpp  web_search.hpp  write.cpp  write.hpp
