[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.13", "cmake>=3.18", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "openrein"
version = "0.6.0"
description = "Minimal harness engine for building LLM agent apps (C++ + pybind11)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["llm", "agent", "claude", "anthropic", "tool-use"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/kurt01124/openrein"

[project.optional-dependencies]
dev = ["pytest>=7", "anthropic"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["python/openrein"]

