[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rein-code"
version = "0.1.0"
description = "Claude Code-style AI coding agent CLI built on openrein"
requires-python = ">=3.10"
dependencies = [
    # openrein must be built and installed first — see scripts/build.bat or scripts/build.sh
    # openrein
    "openai>=1.0",
]

[project.scripts]
rein-code = "rein_code.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
